--- a/style/site.css
+++ b/style/site.css
@@ -1,48 +1,61 @@
 /* site general settings */
-body {
-    font-family: "Trebuchet MS", Verdana, sans-serif;
+body
+{
+    font-family: 'Trebuchet MS', Verdana, sans-serif;
     font-size: 20px;
+
+    padding: 3px;
+
     color: black;
     background-color: dimgrey;
-    padding: 3px;
 }
 
-h1 {
-    color: black;
+h1
+{
     font-family: Verdana;
     font-size: 20px;
+
+    color: black;
 }
 
 /* page content */
-#main {
+#main
+{
     padding: 5px;
-    padding-left:  15px;
     padding-right: 15px;
-    background-color: #ffffff;
+    padding-left: 15px;
+
     border-radius: 0 0 5px 5px;
+    background-color: #fff;
 }
 
 /* navigation bar */
-ul#menu {
-    padding: 0;
+ul#menu
+{
     margin-bottom: 11px;
+    padding: 0;
 }
 
-ul#menu li {
+ul#menu li
+{
     display: inline;
+
     margin-right: 3px;
 }
 
-ul#menu li a {
-    background-color: #ffffff;
+ul#menu li a
+{
     padding: 10px 20px;
+
     text-decoration: none;
+
     color: #696969;
     border-radius: 4px 4px 0 0;
+    background-color: #fff;
 }
 
-ul#menu li a:hover {
+ul#menu li a:hover
+{
     color: white;
     background-color: black;
-} 
-
+}
